# isaaclab-g1-inspire-locomotion

./: .gitignore  README.md  launch.sh  pyproject.toml
artifacts/checkpoints/default/: model_1499.pt
artifacts/policies/default/: policy.pt
artifacts/usd/g1_inspire_dfq/: g1_29dof_rev_1_0_with_inspire_hand_DFQ.usd
artifacts/usd/g1_inspire_dfq/configuration/: g1_29dof_rev_1_0_with_inspire_hand_DFQ_physics.usd  g1_29dof_rev_1_0_with_inspire_hand_DFQ_robot.usd  g1_29dof_rev_1_0_with_inspire_hand_DFQ_sensor.usd
docker/: .env.example  docker-compose.ros2.yaml  docker-compose.yaml
docker/ros2-policy/: Dockerfile
logs/rsl_rl/g1_inspire_flat_default/2026-03-14_13-45-52_default/params/: env.yaml
ros2_ws/: README.md  fastdds.xml
ros2_ws/src/g1_policy_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/g1_policy_controller/g1_policy_controller/: action_graph_policy_node.py  policy_node.py
scripts/: check_deploy_headless.py  convert_g1_inspire_usd.py  export_policy_jit.py  g1_ros2_action_graph.py  g1_ros2_bridge.py  g1_standalone.py  play.py  train.py
source/isaaclab_g1_inspire_locomotion/isaaclab_g1_inspire_locomotion/: __init__.py
source/isaaclab_g1_inspire_locomotion/isaaclab_g1_inspire_locomotion/assets/: __init__.py
source/isaaclab_g1_inspire_locomotion/isaaclab_g1_inspire_locomotion/assets/robots/: __init__.py  g1_inspire.py
source/isaaclab_g1_inspire_locomotion/isaaclab_g1_inspire_locomotion/tasks/: __init__.py
source/isaaclab_g1_inspire_locomotion/isaaclab_g1_inspire_locomotion/tasks/locomotion/: __init__.py
(+13 files in other folders)
