<?xml version="1.0"?>
<package format="3">
  <name>g1_policy_controller</name>
  <version>0.1.0</version>
  <description>External ROS 2 policy node for G1 Isaac Sim deploy.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
